# Luminide

./: .gitignore  App.ts  README.md  config.json  package.json  tsconfig.json
.github/: Release-Description.md
.github/workflows/: Build.yml  Release.yml  build-repo.yml
LuminideStart/: CMakeLists.txt  linux.cpp  windows.cpp
LuminideStart/Linux/: main.cpp
LuminideStart/Windows/: CMakeLists.txt  main.cpp
LuminideStart/src/: main.cpp
entities/group/: Group.ts  GroupFile.ts
entities/message/: Message.ts  MessageChain.ts
entities/misc/: OfflineFile.ts
entities/system/: Device.ts
events/: EventHandler.ts
events/bot/: BotEvent.ts  BotInitializedEvent.ts
events/friend/: FriendAddedEvent.ts  FriendMessageEvent.ts  FriendMessageRecalledEvent.ts
events/group/: GroupAdminChangedEvent.ts  GroupEssenceMessageChangedEvent.ts  GroupEvent.ts  GroupFileUploadEvent.ts  GroupMemberCardChangedEvent.ts  GroupMemberHonorChangedEvent.ts  GroupMemberLeftEvent.ts  GroupMemberLuckyKingEvent.ts  GroupMemberTitleChangedEvent.ts  GroupMessageEvent.ts  GroupSelfLeftEvent.ts  GroupWholeUnmutedEvent.ts
events/misc/: StrangerMessageEvent.ts
events/request/: FriendAddRequestEvent.ts  GroupInviteRequestEvent.ts  GroupJoinRequestEvent.ts
events/websocket/: WebSocketClosedEvent.ts  WebSocketDestroyedEvent.ts  WebSocketErrorEvent.ts  WebSocketHeartBeatEvent.ts  WebSocketLifeCycleEvent.ts  WebSocketStatusChangedEvent.ts
modules/: ErrorPrint.ts  Event.ts  PluginLoader.ts  WebSocket.ts
src/events/: Event.ts  EventManager.ts
tools/: FileUtils.ts
utils/: FileUtils.ts
(+68 files in other folders)
